// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unicode.sql > line 8 1`] = `
[
  "SELECT normalize('')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 17,
                            "sval": {
                              "sval": "",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_SQL_SYNTAX",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "normalize",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`unicode.sql > line 16 1`] = `
[
  "SELECT "normalize"('abc', 'def')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 19,
                            "sval": {
                              "sval": "abc",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 26,
                            "sval": {
                              "sval": "def",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "normalize",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`unicode.sql > line 16 2`] = `
[
  "  -- run-time error

SELECT U&'\\00E4\\24D1c' IS NORMALIZED AS test_default",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 28,
                  "name": "test_default",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 28,
                            "sval": {
                              "sval": "äⓑc",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_SQL_SYNTAX",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "is_normalized",
                          },
                        },
                      ],
                      "location": 44,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`unicode.sql > line 21 1`] = `
[
  "SELECT num, val,
    val IS NFC NORMALIZED AS NFC,
    val IS NFD NORMALIZED AS NFD,
    val IS NFKC NORMALIZED AS NFKC,
    val IS NFKD NORMALIZED AS NFKD
FROM
  (VALUES (1, U&'\\00E4bc'),
          (2, U&'\\0061\\0308bc'),
          (3, U&'\\00E4\\24D1c'),
          (4, U&'\\0061\\0308\\24D1c'),
          (5, '')) vals (num, val)
ORDER BY num",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "vals",
                    "colnames": [
                      {
                        "String": {
                          "sval": "num",
                        },
                      },
                      {
                        "String": {
                          "sval": "val",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 172,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 175,
                                  "sval": {
                                    "sval": "äbc",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 2,
                                  },
                                  "location": 200,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 203,
                                  "sval": {
                                    "sval": "äbc",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 3,
                                  },
                                  "location": 233,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 236,
                                  "sval": {
                                    "sval": "äⓑc",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 4,
                                  },
                                  "location": 265,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 268,
                                  "sval": {
                                    "sval": "äⓑc",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 5,
                                  },
                                  "location": 302,
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 305,
                                  "sval": {
                                    "sval": "",
                                  },
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "num",
                          },
                        },
                      ],
                      "location": 335,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "num",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 12,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "val",
                          },
                        },
                      ],
                      "location": 12,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 21,
                  "name": "nfc",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "val",
                                },
                              },
                            ],
                            "location": 21,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 28,
                            "sval": {
                              "sval": "NFC",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_SQL_SYNTAX",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "is_normalized",
                          },
                        },
                      ],
                      "location": 25,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 55,
                  "name": "nfd",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "val",
                                },
                              },
                            ],
                            "location": 55,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 62,
                            "sval": {
                              "sval": "NFD",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_SQL_SYNTAX",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "is_normalized",
                          },
                        },
                      ],
                      "location": 59,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 89,
                  "name": "nfkc",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "val",
                                },
                              },
                            ],
                            "location": 89,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 96,
                            "sval": {
                              "sval": "NFKC",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_SQL_SYNTAX",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "is_normalized",
                          },
                        },
                      ],
                      "location": 93,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 125,
                  "name": "nfkd",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "val",
                                },
                              },
                            ],
                            "location": 125,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 132,
                            "sval": {
                              "sval": "NFKD",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_SQL_SYNTAX",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "is_normalized",
                          },
                        },
                      ],
                      "location": 129,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`unicode.sql > line 34 1`] = `
[
  "SELECT is_normalized('abc', 'def')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 21,
                            "sval": {
                              "sval": "abc",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 28,
                            "sval": {
                              "sval": "def",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "is_normalized",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
